--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,6 @@
 body{
-    background: #e9e9e9
+    background:#001fff;
+
 }
 .proyecto{
     width: auto;
@@ -44,18 +45,27 @@ img{
     width: 30%;
     height: auto;
     background: transparent;
-    text-align:start;
+    text-align:center;
     align-self:baseline;
     justify-content: center;
 }
-:hover{
-    color: red;
-}
+
+
 
 #imgrrss{
     height: 10%;
     width: 10%;
     justify-content: center;
+}
+#derechos{
+    height: auto;
+    width: auto;
+    justify-content: left;
+    align-items: left;
+    text-align: center;
+    align-self: center;
+    background:transparent;
+
 }
     
 @media only screen and (max-width: 600px) {
