--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
     text-align: center; 
     font-family: 'Courier New', Courier, monospace;
@@ -72,25 +71,24 @@ nav ul span {
 }
 
 .imagenes {
-    width: ;
-
-=======
-body{
-    background:#001fff;
+    width:auto;
 
 }
+     
+
 .proyecto{
     width: auto;
     height:auto;
-    background: #001fff;
+    background: #F7CBF5;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
-      
+
+
 .elemento{
-    color: #f7cbf5;
+    color: #001FFF;
     margin: 5px;
     width: 15%;
     height: auto;
@@ -99,25 +97,26 @@ body{
     align-self:baseline;
     justify-content: center;
 }
+
 img{
-    height: 100%;
-    width: 100%;
+    height: 50%;
+    width: 50%;
     justify-content: center;
 }
 .footer{
     width: auto; 
-    background:#001fff;
+    background:#F7CBF5;
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
     justify-content: start;
-    color:white
+    color:#001FFF;
     
 }
 
 .elemento-footer{
     
-    color: #f7cbf5;
+    color: #001FFF;
     margin: 1px;
     width: 30%;
     height: auto;
@@ -125,18 +124,20 @@ img{
     text-align:center;
     align-self:baseline;
     justify-content: center;
->>>>>>> 928fdb51cd3be0265cb78fcfe0067cd18d6d1639
+
+}
+.proyecto{
+    width: auto;
+    height:auto;
+    background: #F7CBF5;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 
 
-<<<<<<< HEAD
-
-
-
-
-
-=======
 #imgrrss{
     height: 10%;
     width: 10%;
@@ -168,4 +169,3 @@ img{
         width: 25%;
     }
 }
->>>>>>> 928fdb51cd3be0265cb78fcfe0067cd18d6d1639
