--- a/estilos.css
+++ b/estilos.css
@@ -71,7 +71,8 @@ nav ul span {
 }
 
 .imagenes {
-    width:auto;
+    width:50%;
+    height:50%;
 
 }
      
@@ -99,8 +100,8 @@ nav ul span {
 }
 
 img{
-    height: 50%;
-    width: 50%;
+    height:100%;
+    width: 100%;
     justify-content: center;
 }
 .footer{
@@ -155,7 +156,7 @@ img{
 }
     
 @media only screen and (max-width: 600px) {
-    .elemento, .proyecto, .elemento-footer{
+    body {
     height: auto;
     width: auto;
     background-color: lightblue;
