--- a/estilos.css
+++ b/estilos.css
@@ -75,8 +75,6 @@ nav ul span {
     height:50%;
 
 }
-     
-
 .proyecto{
     width: auto;
     height:auto;
@@ -85,6 +83,7 @@ nav ul span {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: space-around;
 }
 
 
@@ -127,7 +126,8 @@ img{
     justify-content: center;
 
 }
-.proyecto{
+
+.seccion1{
     width: auto;
     height:auto;
     background: #F7CBF5;
@@ -135,9 +135,35 @@ img{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    align-self: baseline;
+    align-content: space-around;
+   
 }
+.compseccion{
+    width: 25%;
+    height:25%;
+    background: #F7CBF5;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-around;
+}
+.encabezado-trabajo{
+        width: 100%;
+        height: 100%;
+        align-content: flex-start;
+}
+.eventos{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    margin:1em;
+    height: 50%;
+    width: 50%;
 
-
+}
 
 #imgrrss{
     height: 10%;
